# synt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tools.nu
.github/workflows/: CI.yaml  Docs.yaml  Publish.yaml
docs/: mkdocs.yml
docs/docs/: demo_orm.md  demo_single_file.md  index.md  terms.md
docs/docs/api/: SUMMARY.md  code.md  index.md  prelude.md
docs/docs/api/errors/: expr.md  ident.md  index.md
docs/docs/api/expr/: assignment.md  attribute.md  binary_op.md  call.md  closure.md  comprehension.md  condition.md  dict.md  empty.md  expr.md  fstring.md  index.md  list.md  set.md  subscript.md  tuple.md  type_check.md  unary_op.md  wrapped.md
docs/docs/api/token/: ident.md  index.md  keyword.md  kv_pair.md
docs/docs/api/tokens/: ident.md  index.md  keywords.md  kv_pair.md
scripts/: gen_api_ref.py
synpy/: __init__.py  code.py  prelude.py
synpy/errors/: __init__.py  expr.py
synpy/expr/: __init__.py  assignment.py  attribute.py  binary_op.py  call.py  closure.py  comprehension.py  condition.py  dict.py  empty.py  expr.py  fstring.py  list.py  set.py  subscript.py  tuple.py  type_check.py  unary_op.py  wrapped.py
synpy/token/: __init__.py  ident.py  keyword.py  kv_pair.py
synpy/tokens/: __init__.py  ident.py  keywords.py  kv_pair.py  lit.py
synt/: __init__.py  code.py  file.py  prelude.py  type_check.py
synt/errors/: __init__.py  expr.py  ident.py
synt/expr/: __init__.py  alias.py  assignment.py  attribute.py  binary_op.py  call.py  closure.py  comprehension.py  condition.py  dict.py  empty.py  expr.py  fstring.py  list.py  modpath.py  named_expr.py  set.py  subscript.py  tuple.py  type_check.py  unary_op.py  wrapped.py
synt/stmt/: __init__.py  assertion.py  assign.py  block.py  branch.py  cls.py  context.py  decorator.py  delete.py  expression.py  fn.py  importing.py  keyword.py  loop.py  match_case.py  namespace.py  raising.py  returns.py  stmt.py  try_catch.py
synt/tokens/: ident.py  keywords.py  kv_pair.py  lit.py
synt/ty/: __init__.py  type_param.py
tests/: test_doc.py  test_err.py  test_expr.py  test_file.py  test_stmt.py  test_token.py  test_type.py
